-fixed bug where the rating component was cut off in the interactive template -removed old components -removed methods related to flyouts which were removed

--- a/css/default.css
+++ b/css/default.css
@@ -9,18 +9,11 @@
 .listIconTextTemplate .listIconTextItem-Image
 {
     width: 60px;
-    height: 60px;
     margin: 5px;                  
     float: left;                  
     margin-right:20px;            
                                   
 }
-
-.listIconTextItem .listIconTextItem-Detail
-{
-    margin: 5px;
-    float: left;
-}     
 
 .listLayoutHeaderTemplate, .listLayoutHeaderTemplate {
     font-size: larger;
